; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_unary_addr.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_unary_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64, i32 }

@AST_FUNCDESG = common dso_local global i64 0, align 8
@AST_ADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_9__* ()* @read_unary_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_9__* @read_unary_addr() #0 {
  %1 = alloca %struct.TYPE_9__*, align 8
  %2 = alloca %struct.TYPE_9__*, align 8
  %3 = call %struct.TYPE_9__* (...) @read_cast_expr()
  store %struct.TYPE_9__* %3, %struct.TYPE_9__** %2, align 8
  %4 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @AST_FUNCDESG, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %0
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %11 = call %struct.TYPE_9__* @conv(%struct.TYPE_9__* %10)
  store %struct.TYPE_9__* %11, %struct.TYPE_9__** %1, align 8
  br label %22

12:                                               ; preds = %0
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %14 = call i32 @ensure_lvalue(%struct.TYPE_9__* %13)
  %15 = load i32, i32* @AST_ADDR, align 4
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @make_ptr_type(i32 %18)
  %20 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %21 = call %struct.TYPE_9__* @ast_uop(i32 %15, i32 %19, %struct.TYPE_9__* %20)
  store %struct.TYPE_9__* %21, %struct.TYPE_9__** %1, align 8
  br label %22

22:                                               ; preds = %12, %9
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %1, align 8
  ret %struct.TYPE_9__* %23
}

declare dso_local %struct.TYPE_9__* @read_cast_expr(...) #1

declare dso_local %struct.TYPE_9__* @conv(%struct.TYPE_9__*) #1

declare dso_local i32 @ensure_lvalue(%struct.TYPE_9__*) #1

declare dso_local %struct.TYPE_9__* @ast_uop(i32, i32, %struct.TYPE_9__*) #1

declare dso_local i32 @make_ptr_type(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
